apps/base/n8n/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: n8n
  namespace: n8n
  labels:
    app: n8n
spec:
  replicas: 1
  selector:
    matchLabels:
      app: n8n
  template:
    metadata:
      labels:
        app: n8n
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            preference:
              matchExpressions:
              - key: node-type
                operator: In
                values:
                - vm
      containers:
        - name: n8n
          image: n8nio/n8n:2.10.4
          resources:
            requests:
              memory: "384Mi"
              cpu: "100m"
            limits:
              memory: "1Gi"   
              cpu: "1000m"    
          ports:
            - containerPort: 5678
              name: http
