apps/base/n8n/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: n8n
  namespace: n8n
spec:
  ingressClassName: cilium
  rules:
    - host: "cwk.n8n"
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: n8n
                port:
                  number: 5678
